[gd_scene load_steps=9 format=2]

[ext_resource path="res://charecters/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://charecters/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://charecters/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://charecters/enemies/enemy.gd" type="Script" id=4]





[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.9929, 10.4358 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.4041, 3.97418 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.3166, 10 )

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.38419e-06, -0.13139 )
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0851012, 6.46166 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, -0.131 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2147483650

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -8.278 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0.0656938, 4.86143 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
